--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.2.2"
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^3.2.2",
+    "astro-icon": "^0.8.1",
+    "tailwindcss": "^3.0.24"
   }
 }
